<resources>
    // view related resources
    <string name="app_name">Optik Kasih</string>
    <string name="unauthorized">Sesi anda telah berakhir, silahkan login ulang kembali.</string>
    <string name="alert">Perhatian</string>
    <string name="cart">Keranjang</string>
    <string name="home">Utama</string>
    <string name="history">Riwayat</string>
    <string name="profile">Profil</string>
    <string name="buy">Beli</string>
    <string name="description">Deskripsi</string>
    <string name="subtotal">Subtotal</string>
    <string name="add">Tambah</string>
    <string name="order_date">Tanggal Order</string>
    <string name="done_date">Tanggal Selesai</string>
    <string name="transaction_status">Status Transaksi</string>
    <string name="payment_status">Status Pembayaran</string>
    <string name="ordered_items">Barang yang diorder</string>
    <string name="discount">Diskon</string>
    <string name="pay">Bayar</string>
    <string name="total">Total</string>
    <string name="finish_order">Selesaikan Pesanan</string>
    <string name="change_address">Ganti Alamat</string>
    <string name="option">Opsi</string>
    <string name="checkout">Checkout</string>
    <string name="delivery_location">Lokasi Pengiriman</string>
    <string name="choose_payment_method">Pilih Metode Pembayaran</string>
    <string name="success">Sukses</string>
    <string name="order_id">Order Id</string>
    <string name="price">Harga</string>
    <string name="virtual_account">Virtual Account</string>
    <string name="time_left">Waktu tersisa</string>
    <string name="track_transaction">Lacak Transaksi</string>
    <string name="welcome">Selamat Datang</string>
    <string name="email">E-mail</string>
    <string name="password">Kata Sandi</string>
    <string name="login">Masuk</string>
    <string name="no_account">Tidak punya akun?</string>
    <string name="register">Daftar</string>
    <string name="registration">Registrasi</string>
    <string name="confirm_password">Konfirmasi Kata Sandi</string>
    <string name="have_an_account">Sudah punya akun?</string>
    <string name="greeting">Halo,</string>
    <string name="settings">Pengaturan</string>
    <string name="saved_address">Alamat Tersimpan</string>
    <string name="change_password">Ganti Kata Sandi</string>
    <string name="personal_info">Info Personal</string>
    <string name="name">Nama</string>
    <string name="birthdate">Hari Ulang Tahun</string>
    <string name="gender">Gender</string>
    <string name="men">Laki-Laki</string>
    <string name="women">Perempuan</string>
    <string name="save">Simpan</string>
    <string name="old_password">Kata Sandi Lama</string>
    <string name="new_password">Kata Sandi Baru</string>
    <string name="to_primary">Buat Menjadi Alamat Primer</string>
    <string name="edit_address">Ubah Alamat</string>
    <string name="delete_address">Hapus Alamat</string>
    <string name="detail_address">Detail Alamat</string>
    <string name="address_label">Label Alamat</string>
    <string name="address">Alamat</string>
    <string name="neighbourhood">Kelurahan / Desa</string>
    <string name="sub_district">Kecamatan</string>
    <string name="post_code">Kode Pos</string>
    <string name="phone_number">Nomor Telepon</string>
    <string name="my_address">Alamat Saya</string>
    <string name="address_detail">Detail Alamat</string>
    <string name="add_address">Tambah Alamat</string>
    <string name="item_quantity">%1$d Barang</string>

    // connection resources
    <string name="try_again">Mohon Coba Lagi</string>
    <string name="connection_unstable">Koneksi tidak stabil</string>
    <string name="email_invalid">Email tidak valid</string>
    <string name="password_invalid">Kata Sandi tidak valid</string>
    <string name="toast_icon">Toast Icon</string>
    <string name="toast_close_icon">Toast Close Icon</string>
    <string name="something_wrong_msg">Terjadi kesalahan, refresh untuk memuat ulang</string>
    <string name="no_data">Tidak ada data</string>
    <string name="logout">Logout</string>
    <string name="next">Berikutnya</string>
    <string name="select_dates">Pilih Tanggal</string>
    <string name="edit_profile">Edit Profil</string>
    <string name="success_add_account">Sukses Menambah Akun</string>
    <string name="sucess_edit_profile">Berhasil menyunting profil</string>

    // invalid
    <string name="password_not_same">Kata Sandi tidak sama</string>
    <string name="invalid_name">Nama tidak valid</string>
    <string name="invalid_confirm_password">Konfirmasi Kata Sandi tidak valid</string>
    <string name="invalid_birth_date">Tanggal Lahir tidak valid</string>
    <string name="invalid_phone_number">Nomor Telepon tidak valid</string>
    <string name="invalid_address_label">Label Alamat tidak valid</string>
    <string name="invalid_address">Alamat tidak valid</string>
    <string name="invalid_neighbourhood">Kelurahan / Desa tidak valid</string>
    <string name="invalid_sub_district">Kecamatan tidak valid</string>
    <string name="invalid_post_code">Kode Pos tidak valid</string>
    <string name="add_address_success">Berhasil menambahkan alamat</string>
    <string name="edit_address_success">Berhasil menyunting alamat</string>
    <string name="delete_address_msg">Apakah kamu yakin ingin menghapus alamat ini?</string>
    <string name="delete_address_success">Berhasil menghapus alamat</string>
    <string name="primary_address">Alamat Primer</string>
    <string name="delete_primary_address">Hapus Alamat Primer</string>
    <string name="stock_empty">Stok Habis</string>
    <string name="invalid_new_password">Password baru tidak valid</string>
    <string name="invalid_old_password">Password lama tidak valid</string>
    <string name="change_password_success">Berhasil Mengganti Kata Sandi</string>
    <string name="delete">Hapus</string>
    <string name="add_item_to_cart_success">Berhasil menambahkan item ke keranjang</string>
    <string name="delete_item_cart_success">Berhasil menghapus item di keranjang</string>
    <string name="no_address_selected">Tidak ada alamat yang terpilih</string>
    <string name="select_address">Pilih Alamat</string>
    <string name="choose_address">Pilih Alamat</string>
    <string name="order_success_msg">Berhasil membuat orderan</string>
    <string name="payment_method">Metode Pembayaran</string>
    <string name="total_item">Total (%1$s)</string>
    <string name="product_stock">Stok : %1$d</string>
    <string name="order_id_template">ORDER#%1$s</string>
    <string name="waiting_for_payment">Menunggu Pembayaran</string>
    <string name="processed">Diproses</string>
    <string name="sent">Dikirim</string>
    <string name="received">Pesanan Diterima</string>
    <string name="cancel">Batal</string>
    <string name="not_paid">Belum Dibayar</string>
    <string name="paid">Sudah Dibayar</string>
    <string name="make_payment">Lakukan Pembayaran</string>
    <string name="hashtag">#%1$s</string>
    <string name="va_copied">Virtual Account Disalin</string>
    <string name="continue_shopping">Lanjut Belanja</string>
    <string name="check_status_payment">Cek Status Pembayaran</string>
    <string name="order_success">Order Sukses</string>
    <string name="payment_failed">Pembayaran Gagal</string>
    <string name="payment_success">Pembayaran Sukses</string>
    <string name="payment">Pembayaran</string>
    <string name="address_not_in_delivery_range">Area pengiriman hanya terjangkau di Pekanbaru, mohon ganti alamat</string>
</resources>