<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".ui.checkout.CheckoutActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="16dp"
                android:text="@string/delivery_location"
                android:textColor="@color/primaryColor"
                android:textSize="18sp"
                android:textStyle="bold" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="16dp">
                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="24dp"
                    app:cardElevation="0dp">
                    <LinearLayout
                        android:id="@+id/noAddressContainer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:paddingVertical="8dp"
                        android:paddingHorizontal="16dp">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:text="@string/no_address_selected"
                            android:layout_height="wrap_content"/>
                        <View
                            android:layout_width="8dp"
                            android:layout_height="match_parent"/>
                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btnChooseAddress"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/choose_address"
                            android:textSize="12sp"
                            android:textStyle="bold"
                            app:cornerRadius="16dp" />
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
                <include
                    android:id="@+id/selectedAddress"
                    android:visibility="gone"
                    layout="@layout/address_list_item"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </FrameLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="16dp"
                android:text="@string/ordered_items"
                android:textColor="@color/primaryColor"
                android:textSize="18sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/orderedItems"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="16dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="1"
                tools:listitem="@layout/item_list" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                app:cardCornerRadius="24dp"
                app:cardElevation="0dp">

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:stretchColumns="1">

                    <TableRow android:paddingVertical="2dp">

                        <TextView android:text="@string/subtotal" />

                        <TextView
                            android:id="@+id/subtotal"
                            android:gravity="end"
                            android:textColor="@color/black"
                            tools:text="20.000" />
                    </TableRow>

                    <TableRow android:paddingVertical="2dp">

                        <TextView android:text="@string/discount" />

                        <TextView
                            android:id="@+id/discount"
                            android:gravity="end"
                            android:textColor="@color/black"
                            tools:text="0" />
                    </TableRow>

                    <View
                        android:layout_height="1.5dp"
                        android:layout_marginVertical="8dp"
                        android:alpha="0.2"
                        android:background="@color/black" />

                    <TableRow android:paddingVertical="2dp">

                        <TextView android:text="@string/total" />

                        <TextView
                            android:id="@+id/total"
                            android:gravity="end"
                            android:textColor="@color/black"
                            tools:text="20.000" />
                    </TableRow>
                </TableLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCheckout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/checkout"
                android:textStyle="bold"
                app:cornerRadius="16dp" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>