<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="0dp"
    app:cardPreventCornerOverlap="false"
    app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.OnlyTopCorners.32dp"
    tools:context=".ui.address.AddressOptionDialog">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option"
            android:textAllCaps="true"
            android:textSize="18sp"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/makePrimaryAddress"
            style="@android:style/Widget.Holo.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@android:color/transparent"
            android:insetTop="0dp"
            android:insetLeft="16dp"
            android:insetRight="16dp"
            android:text="@string/to_primary"
            android:textAlignment="textStart"
            android:textColor="@android:color/tab_indicator_text"
            android:textSize="14sp"
            app:icon="@drawable/star"
            app:iconSize="24dp"
            app:iconTint="@color/black" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/editAddress"
            style="@android:style/Widget.Holo.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:insetTop="0dp"
            android:insetLeft="16dp"
            android:insetRight="16dp"
            android:text="@string/edit_address"
            android:textAlignment="textStart"
            android:textColor="@android:color/tab_indicator_text"
            android:textSize="14sp"
            app:icon="@drawable/ic_edit"
            app:iconSize="24dp"
            app:iconTint="@color/black" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/deleteAddress"
            style="@android:style/Widget.Holo.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:insetTop="0dp"
            android:insetLeft="16dp"
            android:insetRight="16dp"
            android:text="@string/delete_address"
            android:textAlignment="textStart"
            android:textColor="@color/danger"
            android:textSize="14sp"
            app:icon="@drawable/ic_delete"
            app:iconSize="24dp"
            app:iconTint="@color/danger" />
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>